--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-  name: github
+  name: git-gateway
   branch: master
-  repo: davidaherron/injoy
 
 media_folder: static/img
 public_folder: /img
